--- a/src/OpenTracker/Views/Browse/Details.cshtml
+++ b/src/OpenTracker/Views/Browse/Details.cshtml
@@ -42,7 +42,7 @@
 			<span>Add Comment</span>
 		</div>   
 			<div class="content">
-				<textarea rows="1" onfocus="if(this.value == 'Enter your comment here!') { this.value = ''; }" class="textarea-large">Enter your comment here!</textarea>				
+				<textarea rows="1" onfocus="if(this.value == 'Enter your comment here!') { this.value = ''; }" onblur="if(this.value=='')this.value='Enter your comment here!';" class="textarea-large">Enter your comment here!</textarea>				
 			</div>
 			<div class="form-actions">
 			<button tabindex="2" class="submit-button"><span>Comment</span></button>
